--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ log = "0.4"
 wgpu = "27.0.0"
 pollster = "0.3"
 bytemuck = { version = "1.24", features = [ "derive" ] }
+image = { version = "0.24", features = [ "png", "jpeg"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.6"
